website/versioned_docs/version-2.16.x/reference/subsystems/coverage-py.mdx
---
title: coverage-py
---

import Option from "@site/src/components/reference/Option";
import styles from "@site/src/components/reference/styles.module.css";

---

Configuration for Python test coverage measurement.

Backend: <span className="color--primary">`pants.backend.python`</span>

Config section: <span className="color--primary">`[coverage-py]`</span>

<span className={styles.options}>

## Basic options

### `filter`

<Option
  cli_repr={`--coverage-py-filter="['<str>', '<str>', ...]"`}
  env_repr='PANTS_COVERAGE_PY_FILTER'
  default_repr={`[]`}
>
A list of Python modules or filesystem paths to use in the coverage report, e.g. `['helloworld_test', 'helloworld/util/dirutil']`.

Both modules and directory paths are recursive: any submodules or child paths, respectively, will be included.

If you leave this off, the coverage report will include every file in the transitive closure of the address/file arguments; for example, `test ::` will include every Python file in your project, whereas `test project/app_test.py` will include `app_test.py` and any of its transitive dependencies.

</Option>

### `report`

<Option
  cli_repr={`--coverage-py-report="[<CoverageReportType>, <CoverageReportType>, ...]"`}
  env_repr="PANTS_COVERAGE_PY_REPORT"
  one_of="console, xml, html, raw, json, lcov"
  default_repr={`["console"]`}
>
  Which coverage report type(s) to emit.
</Option>

### `global_report`

<Option
  cli_repr={`--[no-]coverage-py-global-report`}
  env_repr='PANTS_COVERAGE_PY_GLOBAL_REPORT'
  default_repr={`False`}
>
If true, Pants will generate a global coverage report.

The global report will include all Python source files in the workspace and not just those depended on by the tests that were run.

</Option>

### `fail_under`

<Option
  cli_repr={`--coverage-py-fail-under=<float>`}
  env_repr='PANTS_COVERAGE_PY_FAIL_UNDER'
  default_repr={`None`}
>
Fail if the total combined coverage percentage for all tests is less than this number.

Use this instead of setting fail_under in a coverage.py config file, as the config will apply to each test separately, while you typically want this to apply to the combined coverage for all tests run.

Note that you must generate at least one (non-raw) coverage report for this check to trigger.

Note also that if you specify a non-integral value, you must also set [report] precision properly in the coverage.py config file to make use of the decimal places. See https://coverage.readthedocs.io/en/latest/config.html.

</Option>

## Advanced options

### `install_from_resolve`

<Option
  cli_repr={`--coverage-py-install-from-resolve=<str>`}
  env_repr='PANTS_COVERAGE_PY_INSTALL_FROM_RESOLVE'
  default_repr={`None`}
>
If specified, install the tool using the lockfile for this named resolve.

This resolve must be defined in [python].resolves, as described in https://www.pantsbuild.org/v2.16/docs/python-third-party-dependencies#user-lockfiles.

The resolve&#x27;s entire lockfile will be installed, unless specific requirements are listed via the `requirements` option, in which case only those requirements will be installed. This is useful if you don&#x27;t want to invalidate the tool&#x27;s outputs when the resolve incurs changes to unrelated requirements.

If unspecified, and the `lockfile` option is unset, the tool will be installed using the default lockfile shipped with Pants.

If unspecified, and the `lockfile` option is set, the tool will use the custom `coverage-py` &quot;tool lockfile&quot; generated from the `version` and `extra_requirements` options. But note that this mechanism is deprecated.

</Option>

### `requirements`

<Option
  cli_repr={`--coverage-py-requirements="['<str>', '<str>', ...]"`}
  env_repr='PANTS_COVERAGE_PY_REQUIREMENTS'
  default_repr={`[]`}
>
If install_from_resolve is specified, install these requirements, at the versions provided by the specified resolve&#x27;s lockfile.

Values can be pip-style requirements (e.g., `tool` or `tool==1.2.3` or `tool>=1.2.3`), or addresses of python_requirement targets (or targets that generate or depend on python_requirement targets).

The lockfile will be validated against the requirements - if a lockfile doesn&#x27;t provide the requirement (at a suitable version, if the requirement specifies version constraints) Pants will error.

If unspecified, install the entire lockfile.

</Option>

### `interpreter_constraints`

<Option
  cli_repr={`--coverage-py-interpreter-constraints="['<str>', '<str>', ...]"`}
  env_repr="PANTS_COVERAGE_PY_INTERPRETER_CONSTRAINTS"
  default_repr={`["CPython>=3.7,<4"]`}
>
  Python interpreter constraints for this tool.
</Option>

### `console_script`

<Option
  cli_repr={`--coverage-py-console-script=<str>`}
  env_repr="PANTS_COVERAGE_PY_CONSOLE_SCRIPT"
  default_repr={`coverage`}
>
  The console script for the tool. Using this option is generally preferable to
  (and mutually exclusive with) specifying an --entry-point since console script
  names have a higher expectation of staying stable across releases of the tool.
  Usually, you will not want to change this from the default.
</Option>

### `entry_point`

<Option
  cli_repr={`--coverage-py-entry-point=<str>`}
  env_repr="PANTS_COVERAGE_PY_ENTRY_POINT"
  default_repr={`None`}
>
  The entry point for the tool. Generally you only want to use this option if
  the tool does not offer a --console-script (which this option is mutually
  exclusive with). Usually, you will not want to change this from the default.
</Option>

### `output_dir`

<Option
  cli_repr={`--coverage-py-output-dir=<str>`}
  env_repr="PANTS_COVERAGE_PY_OUTPUT_DIR"
  default_repr={`{distdir}/coverage/python`}
>
  Path to write the Pytest Coverage report to. Must be relative to the build
  root.
</Option>

### `config`

<Option
  cli_repr={`--coverage-py-config=<file_option>`}
  env_repr='PANTS_COVERAGE_PY_CONFIG'
  default_repr={`None`}
>
Path to an INI or TOML config file understood by coverage.py (https://coverage.readthedocs.io/en/stable/config.html).

Setting this option will disable `[coverage-py].config_discovery`. Use this option if the config is located in a non-standard location.

</Option>

### `config_discovery`

<Option
  cli_repr={`--[no-]coverage-py-config-discovery`}
  env_repr='PANTS_COVERAGE_PY_CONFIG_DISCOVERY'
  default_repr={`True`}
>
If true, Pants will include any relevant config files during runs (`.coveragerc`, `setup.cfg`, `tox.ini`, and `pyproject.toml`).

Use `[coverage-py].config` instead if your config is in a non-standard location.

</Option>

## Deprecated options

### `version`

<Option
  cli_repr={`--coverage-py-version=<str>`}
  env_repr="PANTS_COVERAGE_PY_VERSION"
  default_repr={`coverage[toml]>=6.5,<8`}
  removal_version="2.18.0.dev1"
  removal_hint={
    "Custom tool versions are now installed from named resolves, as described at https://www.pantsbuild.org/v2.16/docs/python-lockfiles."
  }
>
  Requirement string for the tool.
</Option>

### `extra_requirements`

<Option
  cli_repr={`--coverage-py-extra-requirements="['<str>', '<str>', ...]"`}
  env_repr="PANTS_COVERAGE_PY_EXTRA_REQUIREMENTS"
  default_repr={`[]`}
  removal_version="2.18.0.dev1"
  removal_hint={
    "Custom tool versions are now installed from named resolves, as described at https://www.pantsbuild.org/v2.16/docs/python-lockfiles."
  }
>
  Any additional requirement strings to use with the tool. This is useful if the
  tool allows you to install plugins or if you need to constrain a dependency to
  a certain version.
</Option>

### `lockfile`

<Option
  cli_repr={`--coverage-py-lockfile=<str>`}
  env_repr='PANTS_COVERAGE_PY_LOCKFILE'
  default_repr={`<default>`}
  removal_version='2.18.0.dev0'
  removal_hint={'Custom tool versions are now installed from named resolves, as described at https://www.pantsbuild.org/v2.16/docs/python-lockfiles.<br /><br />1. If you have an existing resolve that includes the requirements for this tool,<br />    you can set `[coverage-py].install_from_resolve = "<resolve name>".<br />    This may be the case if the tool also provides a runtime library, and you want<br />    to specify the version in just one place.<br />2. If not, you can set up a new resolve as described at the link above.<br /><br />Either way, the resolve you choose should provide the requirements currently set by the `version` and `extra-requirements` options for this tool, which you can see by running `pants help-advanced coverage-py`.'}
>
Path to a lockfile used for installing the tool.

Set to the string `<default>` to use a lockfile provided by Pants, so long as you have not changed the `--version` and `--extra-requirements` options, and the tool&#x27;s interpreter constraints are compatible with the default. Pants will error or warn if the lockfile is not compatible (controlled by `[python].invalid_lockfile_behavior`). See https://github.com/pantsbuild/pants/blob/release_2.16.1rc4/src/python/pants/backend/python/subsystems/coverage_py.lock for the default lockfile contents.

Set to the string `<none>` to opt out of using a lockfile. We do not recommend this, though, as lockfiles are essential for reproducible builds and supply-chain security.

To use a custom lockfile, set this option to a file path relative to the build root, then run `scie-pants-linux-x86_64 generate-lockfiles --resolve=coverage-py`.

Alternatively, you can set this option to the path to a custom lockfile using pip&#x27;s requirements.txt-style, ideally with `--hash`. Set `[python].invalid_lockfile_behavior = 'ignore'` so that Pants does not complain about missing lockfile headers.

</Option>

</span>

